# nli-boost

./: .gitignore  METHOD.md  NOTES.md  README.md  pyproject.toml
configs/: ag_news.yaml  example.yaml  openers.json  sst2.yaml  trec.yaml  trec_baseline_l.yaml  trec_best_l.yaml  trec_best_l_max.yaml  trec_cov_l.yaml  trec_finalize_l.yaml  trec_lown.yaml  trec_pro_tuned_l.yaml  trec_summary_pls_cpu.yaml  trec_tree_scratch.yaml  trec_tree_scratch_s27.yaml  trec_tree_union.yaml  trec_tuned_l_lex.yaml
docs/: pseudolabel-plan.md
examples/: cfpb.py
experiments/data/: goemotions_pool_v2.json
experiments/hvexp/: features.py  forest.py  hypotheses.py  systems.py
experiments/results/cfpb/: cfpb_pool_random_evolved_tabular_tfidf.json  cfpb_pool_temporal.json  manifest.json
experiments/results/forests/: goemotions_k5_s7.json  sst2_k5_s7.json  trec_k5_s7.json
experiments/results/pools/: banking77_gen256.json  goemotions_gen_matched.json  manifest.json  sst2_gen_matched.json  trec_gen256.json  trec_gen_evolved.json  trec_gen_matched.json  trec_gen_smoke.json  trec_gen_static.json
experiments/results/processed/: agnews_lown_accuracy.csv  agnews_lown_macro_f1.csv  banking77_lown_accuracy.csv  banking77_lown_macro_f1.csv  banking77_scaling_accuracy.csv  banking77_scaling_macro_f1.csv  trec_generated_accuracy.csv  trec_generated_macro_f1.csv  trec_with_finetune_accuracy.csv  trec_with_finetune_macro_f1.csv
experiments/results/raw/: llm_forest.json  llm_forest_matched.json
experiments/results/raw/abl_ag_news_scoremode/: manifest.json  results.jsonl
experiments/results/raw/abl_banking77_poolsize/: manifest.json  results.jsonl
experiments/results/raw/abl_sst2_scoremode/: manifest.json  results.jsonl
experiments/results/raw/abl_trec_encoder/: manifest.json  results.jsonl
experiments/results/raw/abl_trec_poolsize/: manifest.json  results.jsonl
experiments/results/raw/abl_trec_poolsize_m/: manifest.json  results.jsonl
experiments/results/raw/abl_trec_poolsize_s/: manifest.json  results.jsonl
experiments/results/raw/abl_trec_poolsize_xs/: manifest.json  results.jsonl
experiments/results/raw/lc_agnews_baselines_l/: manifest.json  results.jsonl
experiments/results/raw/lc_banking77_baselines_l/: manifest.json  results.jsonl
experiments/results/raw/lc_banking77_scaling_l/: manifest.json  results.jsonl
experiments/results/raw/lc_goemotions_baselines_l/: results.jsonl
experiments/results/raw/lc_trec_finetuned/: manifest.json  results.jsonl
experiments/results/raw/lc_trec_generated_l/: manifest.json  results.jsonl
experiments/results/raw/probe_goemotions_rewording/: results.jsonl
experiments/results/raw/probe_head_channels/: ag_news__l.json  ag_news__m.json  ag_news__s.json  ag_news__xs.json  ag_news__xxs.json  goemotions__l.json  goemotions__m.json  goemotions__s.json  goemotions__xs.json  goemotions__xxs.json  results.jsonl  sst2__l.json  sst2__m.json  sst2__s.json  sst2__xs.json  sst2__xxs.json  trec__l.json  trec__m.json  trec__s.json  trec__xs.json  trec__xxs.json
experiments/results/raw/probe_pool_evolution_trec/: pipeline.json  trajectory.json
experiments/results/raw/probe_sst2_mechanism/: results.jsonl
experiments/results/raw/tt_cfpb_evolved/: manifest.json  results.jsonl  summary.md
experiments/results/raw/tt_cfpb_temporal/: manifest.json  results.jsonl  summary.md
experiments/results/tables/: agnews_lown_accuracy.md  agnews_lown_accuracy.tex  agnews_lown_macro_f1.md  agnews_lown_macro_f1.tex  banking77_lown_accuracy.md  banking77_lown_accuracy.tex  banking77_lown_macro_f1.md  banking77_lown_macro_f1.tex  banking77_scaling_accuracy.md  banking77_scaling_accuracy.tex  banking77_scaling_macro_f1.md  banking77_scaling_macro_f1.tex  trec_generated_accuracy.md  trec_generated_accuracy.tex  trec_generated_macro_f1.md  trec_generated_macro_f1.tex  trec_with_finetune_accuracy.md  trec_with_finetune_accuracy.tex  trec_with_finetune_macro_f1.md  trec_with_finetune_macro_f1.tex
experiments/scripts/: _launch_head_channels.sh  _launch_pool_evolution.sh  diag_leaf_headroom.py  generate_pool.py  llm_forest.py  make_figures.py  prep_cfpb.py  probe_goemotions_rewording.py  probe_head_channels.py  probe_pool_evolution.py  probe_sst2_mechanism.py  prune_bakeoff.py  run_ablation.py  run_accordion.py  run_learning_curve.py  run_status_daemon.py  statusd
paper/: draft.md  experiment_notes.md  research_report.md
src/hypothesis_vectorizer/: __init__.py  cli.py  compare.py  config.py  data.py  dedup.py  head.py  lexical.py  vectorizer.py
src/hypothesis_vectorizer/train/: __init__.py  accordion.py  cli.py  compare.py  data.py  evolve.py  head.py  lexical.py  openers.py  proposer.py  runner.py  tree_evolve.py
src/nli_boost/: __init__.py  cache.py  cli.py  config.py  costs.py  data.py  dedup.py  diagnostics.py  encoder.py  evolve.py  gepa_tune.py  head.py  proposer.py  reward.py  runner.py  vectorizer.py
tests/: conftest.py  test_accordion.py  test_evolve.py  test_forest.py  test_gepa_tune.py  test_head_and_cache.py  test_inference_isolation.py  test_lexical.py  test_reward.py  test_runner_and_dedup.py  test_sklearn_workflow.py  test_tree_evolve.py  test_vectorizer.py
