[project]
name = "hypothesis-vectorizer"
version = "0.3.0"
description = "Interpretable text classification from LLM-written NLI hypotheses scored by a frozen cross-encoder, as scikit-learn features"
readme = "README.md"
requires-python = ">=3.11"
# Inference core: HypothesisVectorizer needs only the encoder + sklearn. No LM/dspy.
dependencies = [
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
]

[project.optional-dependencies]
# Training: hypothesis generation/evolution (LM), dataset loading, the CLI.
# A real extra (ships in wheel metadata) so `pip install "hypothesis-vectorizer[train]"` works.
train = [
    "datasets>=5.0.0",
    "dspy>=3.2.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
hypothesis-vectorizer = "hypothesis_vectorizer.train.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypothesis_vectorizer"]

[tool.uv]
# dev group (which pulls in the train extra) is installed by default for `uv sync`.
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
src = ["src", "tests"]

[dependency-groups]
dev = [
    "hypothesis-vectorizer[train]",  # dev/test env always has the training side (tests exercise it via fakes)
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
